form links added

--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                 <h3>UI/UX Designer</h3>
                 <p>Company: ABC Corp.</p>
                 <p>Location: New York</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSetW-tBDIIl0bpPXAtyMx93u8yTv406bOdhI1tJbrOjRMtQ-A/viewform?usp=header">Apply Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6sYaBH35dfxMrkNmo6OPLCao3XvP6UmDPvNhwTrFiBFQUtg/viewform?usp=dialog">Apply Now</a>
             </div>
             <div class="job-card">
                 <h3>Marketing Manager</h3>
                 <p>Company: XYZ Ltd.</p>
                 <p>Location: San Francisco</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSetW-tBDIIl0bpPXAtyMx93u8yTv406bOdhI1tJbrOjRMtQ-A/viewform?usp=header">Apply Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6sYaBH35dfxMrkNmo6OPLCao3XvP6UmDPvNhwTrFiBFQUtg/viewform?usp=dialog">Apply Now</a>
             </div>
             <div class="job-card">
                 <h3>Product Manager</h3>
                 <p>Company: ABC Corp.</p>
                 <p>Location: Remote</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSetW-tBDIIl0bpPXAtyMx93u8yTv406bOdhI1tJbrOjRMtQ-A/viewform?usp=header">Apply Now</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6sYaBH35dfxMrkNmo6OPLCao3XvP6UmDPvNhwTrFiBFQUtg/viewform?usp=dialog">Apply Now</a>
             </div>
         </div>
     </section>
