--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
                 <h3>UI/UX Designer</h3>
                 <p>Company: ABC Corp.</p>
                 <p>Location: New York</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6sYaBH35dfxMrkNmo6OPLCao3XvP6UmDPvNhwTrFiBFQUtg/viewform?usp=dialog">Apply Now</a>
+                <a href="https://forms.gle/wuAnCCiFoSkbyh3t9">Apply Now</a>
             </div>
             <div class="job-card">
                 <h3>Marketing Manager</h3>
                 <p>Company: XYZ Ltd.</p>
                 <p>Location: San Francisco</p>
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6sYaBH35dfxMrkNmo6OPLCao3XvP6UmDPvNhwTrFiBFQUtg/viewform?usp=dialog">Apply Now</a>
+                <a href="https://forms.gle/4ihU7vDUTrKhuGEWA">Apply Now</a>
             </div>
             <div class="job-card">
                 <h3>Product Manager</h3>
